# EasyDiscord

./: README.md  setup.cfg  setup.py
Actual Scripts/: EasyDiscord.py
