[metadata]
name = Smg88_CUS
description = Full name: Smartguy88 - Commonly Used Stuff. Contains my actually used common functions :)
author = Smartguy88
author_email = verysmartguy88@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Smartestguy88/EasyDiscord
platforms = unix, linux, osx, cygwin, win32
version = 0.0.1
classifiers = 
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10

[options]
package_dir =
    = packages
packages = find:
python_requires = >=3.9

[options.packages.find]
where = packages

[options.extras_require]
testing =
  pytest>=6.0